fix: overlapping controls

--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -44,7 +44,6 @@
 .viewer {
   display: flex;
   flex-direction: row;
-  height: 30vh;
 }
 
 .paper {
